--- a/templates/Base.html
+++ b/templates/Base.html
@@ -70,11 +70,6 @@
                     </li>
                     <li class="NavLateralDivider"></li>
 
-                    <li>
-                        <a href="/show" class="waves-effect waves-light"><i class="zmdi zmdi zmdi-folder-star-alt zmdi-hc-fw"></i> Muestra</a>
-                    </li>
-                    <li class="NavLateralDivider"></li>
-
                 </ul><br><br><br>
 
             </div>  
@@ -138,5 +133,6 @@
             </div>
         </footer>
     </section>    
+    {% block finalJS %}{% endblock %}
 </body>
 </html>
