--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -713,3 +713,16 @@ body, html{
       box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
   }
+
+.graficador{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 650px){
+    .graficador{
+        object-fit: contain;
+    }
+}
