--- a/templates/init.html
+++ b/templates/init.html
@@ -56,7 +56,7 @@
             <a href="/" class="waves-effect waves-light btn-large teal">Volver a calcular</a>
         </div><br><br>
         <div class="row center-align">
-            <img id="grafica" src="" alt="">
+            <img id="grafica" class="graficador" src="" alt="">
         </div>
     </article>
 </div>
